# unsloth-qwen4b

./: .gitignore  eval.py  plot_harmful_levels.py  pyproject.toml  tasks.py  train_grpo.py  train_sft.py
configs/: fsdp.yaml
grpo_trainer_lora_model_1/: adapter_config.json
scripts/: eval_checkpoints.sh  sft_olmo7b_think.sh  sft_qwen4b_toxic.sh  train_olmo_canary.sh  train_olmo_strongreject.sh  train_qwen_canary.sh  train_qwen_strongreject.sh
scripts/inoc/: grpo_control.sh  grpo_control2.sh  grpo_harmful.sh  grpo_inoculated.sh  olmo32b_grpo_harmful.sh  olmo32b_sft.sh  olmo_grpo_control.sh  olmo_grpo_inoculated.sh
utils/: merge_checkpoint.py
